--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "build:package:extension": "pnpm run build:extension && pnpm run package:extension",
     "build": "nx build",
     "clean:extension": "nx reset && rm -rf apps/huckleberry-extension/dist",
+    "lint:all": "nx run-many --target=lint --all --skip-nx-cache",
+    "lint:fix:all": "nx run-many --target=lint --all --skip-nx-cache --fix",
     "package:extension": "cd apps/huckleberry-extension && npx vsce package --no-dependencies",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
     "start:docs": "cd apps/huckleberry-docs && npx docusaurus start",
     "test:extension": "nx test vscode-copilot-huckleberry",
+    "typecheck:all": "nx run-many --target=typecheck --all",
     "watch:extension": "nx build vscode-copilot-huckleberry --watch"
   },
   "private": true,
