refactor: task handlers and utilities for improved consistency and readability
- Standardized export formatting in taskHandlers.ts and tasks/index.ts
- Updated import statements to use consistent naming conventions in nextTaskHandler.ts
- Cleaned up whitespace and formatting in taskDecompositionHandler.ts
- Enhanced consistency in taskUtils.ts, including parameter formatting and logging
- Refined todoScanHandler.ts for better readability and structure
- Improved error handling and logging in languageModelToolsProvider.ts
- Simplified ToolManager class with better type handling
- Updated BaseTool and its derived classes for clearer parameter definitions
- Enhanced debug utility functions for better type safety and logging clarity

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,8 +22,18 @@
   ],
   "github.copilot.chat.codesearch.enabled": true,
   "github.copilot.chat.agent.thinkingTool": true,
-  
-  // ESLint configuration for flat config support
   "eslint.enable": true,
-  "eslint.experimental.useFlatConfig": true
+  "eslint.experimental.useFlatConfig": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "eslint.format.enable": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint"
 }
