--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,6 @@
     "source.fixAll.eslint": true
   },
   "eslint.format.enable": true,
-  "editor.formatOnSave": true,
+  "editor.formatOnSave": false,
   "editor.defaultFormatter": "dbaeumer.vscode-eslint"
 }
