docs: add new blog post about scaling codebases with Huckleberry

--- a/apps/huckleberry-docs/blog/tags.yml
+++ b/apps/huckleberry-docs/blog/tags.yml
@@ -26,7 +26,7 @@ huckleberry:
 development:
   label: Development
   permalink: /development
-  description: Development processes, patterns, and best practices
+  description: Software development processes, patterns, and best practices
 
 ai-agents:
   label: AI Agents
