--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -119,15 +119,25 @@ jobs:
         id: extract_changes
         run: |
           VERSION=${{ steps.package_version.outputs.version }}
-          CHANGES=$(awk -v version="## $VERSION \\([0-9]{4}-[0-9]{2}-[0-9]{2}\\)" '
+          # Use a more lenient pattern that matches the version header
+          CHANGES=$(awk -v version="^## ${VERSION}( \\([0-9]{4}-[0-9]{2}-[0-9]{2}\\))?" '
             BEGIN { found=0; content=""; }
-            $0 ~ "^## " { 
-              if (found == 1) { exit }
-              if ($0 ~ version) { found=1; next }
-            }
-            found == 1 { content = content $0 "\n"; }
-            END { print content; }
+            $0 ~ version { found=1; next }
+            found == 1 && /^## [0-9]+\.[0-9]+\.[0-9]+/ { exit }
+            found == 1 { content = content $0 "\n" }
+            END { print content }
           ' CHANGELOG.md)
+          
+          # If no changes found, check git log for conventional commits since last tag
+          if [ -z "$CHANGES" ]; then
+            echo "No changes found in CHANGELOG.md, generating from git log..."
+            LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+            if [ -n "$LAST_TAG" ]; then
+              CHANGES=$(git log ${LAST_TAG}..HEAD --pretty=format:'### %s%n%b' | grep -v '^$' | sed 's/^feat: /### 🚀 Features\n- /g' | sed 's/^fix: /### 🩹 Fixes\n- /g' | sed 's/^docs: /### 📚 Documentation\n- /g')
+            else
+              CHANGES=$(git log --pretty=format:'### %s%n%b' | grep -v '^$' | sed 's/^feat: /### 🚀 Features\n- /g' | sed 's/^fix: /### 🩹 Fixes\n- /g' | sed 's/^docs: /### 📚 Documentation\n- /g')
+            fi
+          fi
           
           CHANGES="${CHANGES//'%'/'%25'}"
           CHANGES="${CHANGES//$'\n'/'%0A'}"
@@ -193,11 +203,30 @@ jobs:
           echo "|------|--------|" >> $GITHUB_STEP_SUMMARY
           echo "| Git Configuration | ✅ Completed |" >> $GITHUB_STEP_SUMMARY
           echo "| Dependencies | ✅ Installed |" >> $GITHUB_STEP_SUMMARY
-          echo "| Version Bump | ${{ steps['Run Nx Release (version bump and git tag only)'].outcome == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-          if [[ "${{ github.event.inputs.dryRun }}" != "true" ]]; then
-            echo "| Root Package.json Update | ${{ steps['Update Root Package.json Version'].outcome == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-            echo "| Extension Packaging | ${{ steps['Package VS Code Extension'].outcome == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
-            echo "| GitHub Release | ${{ steps['Create GitHub Release'].outcome == 'success' && '✅ Success' || '❌ Failed' }} |" >> $GITHUB_STEP_SUMMARY
+          if [ "${{ steps['Run Nx Release (version bump and git tag only)'].conclusion }}" = "success" ]; then
+            echo "| Version Bump | ✅ Success |" >> $GITHUB_STEP_SUMMARY
+          else
+            echo "| Version Bump | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+          fi
+          
+          if [ "${{ github.event.inputs.dryRun }}" != "true" ]; then
+            if [ "${{ steps['Update Root Package.json Version'].conclusion }}" = "success" ]; then
+              echo "| Root Package.json Update | ✅ Success |" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "| Root Package.json Update | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+            fi
+            
+            if [ "${{ steps['Package VS Code Extension'].conclusion }}" = "success" ]; then
+              echo "| Extension Packaging | ✅ Success |" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "| Extension Packaging | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+            fi
+            
+            if [ "${{ steps['Create GitHub Release'].conclusion }}" = "success" ]; then
+              echo "| GitHub Release | ✅ Success |" >> $GITHUB_STEP_SUMMARY
+            else
+              echo "| GitHub Release | ❌ Failed |" >> $GITHUB_STEP_SUMMARY
+            fi
           else
             echo "| Release Steps | ⏭️ Skipped (Dry Run) |" >> $GITHUB_STEP_SUMMARY
           fi
