--- a/apps/huckleberry-docs/blog/tags.yml
+++ b/apps/huckleberry-docs/blog/tags.yml
@@ -1,23 +1,3 @@
-facebook:
-  label: Facebook
-  permalink: /facebook
-  description: Facebook tag description
-
-hello:
-  label: Hello
-  permalink: /hello
-  description: Hello tag description
-
-docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
-  description: Docusaurus tag description
-
-hola:
-  label: Hola
-  permalink: /hola
-  description: Hola tag description
-
 huckleberry:
   label: Huckleberry
   permalink: /huckleberry
@@ -128,7 +108,6 @@ tools-comparison:
   permalink: /tools-comparison
   description: Comparative analyses of different development tools and their use cases
 
-# New tags for UX blog post
 ux-design:
   label: UX Design
   permalink: /ux-design
@@ -148,3 +127,18 @@ user-experience:
   label: User Experience
   permalink: /user-experience
   description: Creating meaningful, intuitive, and delightful user experiences in software applications
+
+typescript:
+  label: TypeScript
+  permalink: /typescript
+  description: Content related to TypeScript development and type-safe programming
+
+tooling:
+  label: Tooling
+  permalink: /tooling
+  description: Development tools, utilities, and infrastructure for software projects
+
+code-quality:
+  label: Code Quality
+  permalink: /code-quality
+  description: Best practices, standards, and tools for maintaining high-quality code
