feat(blog): add new tags for Copilot, Cursor, Tools, and IDE Comparison

--- a/apps/huckleberry-docs/blog/tags.yml
+++ b/apps/huckleberry-docs/blog/tags.yml
@@ -142,3 +142,23 @@ code-quality:
   label: Code Quality
   permalink: /code-quality
   description: Best practices, standards, and tools for maintaining high-quality code
+
+copilot:
+  label: Copilot
+  permalink: /copilot
+  description: Topics specifically focusing on Microsoft's GitHub Copilot AI assistant and its features
+
+cursor:
+  label: Cursor
+  permalink: /cursor
+  description: Content related to the Cursor AI-powered code editor and its capabilities
+
+tools:
+  label: Tools
+  permalink: /tools
+  description: Software tools and utilities that enhance developer workflows and productivity
+
+ide-comparison:
+  label: IDE Comparison
+  permalink: /ide-comparison
+  description: Comparative analysis of different Integrated Development Environments and code editors
