Enhance blog content and add task management features (#23)
* style(blog): fix punctuation and formatting issues in AI season post

* feat(analytics): add Google Analytics configuration with tracking ID

* refactor: code structure for improved readability and maintainability

* fix(docs): ensure proper formatting in privacy policy contact section

* fix(docs): update privacy policy link to include correct path

* feat(blog): add new post about Copilot vs Cursor comparison

* feat(blog): add new tags for Copilot, Cursor, Tools, and IDE Comparison

* feat: add SVG icons for Huckleberry extension and update chat service to use new icon

- Added huckleberry-icon.svg to the extension's icon directory.
- Added huck.svg to the media directory for chat participant icons.
- Updated ChatService to set the icon path for chat participants using the new huck.svg.

* feat: enhance AI transparency and error handling in Huckleberry extension

* feat(blog): update Copilot vs Cursor comparison with new features and docs

* fix(blog): correct punctuation and clarity in Copilot vs Cursor post

* feat(blog): add new blog post on custom prompts in VS Code and update tags

* feat(extension): add Copilot availability checks to task commands

* feat: implement command handlers for task management features

- Added `createSubtasks` command handler for creating subtasks from a parent task
- Introduced `createTask` command handler for creating new tasks
- Implemented `enrichTask` command handler to enrich tasks with additional details
- Created `exportTasks` command handler for exporting tasks in various formats
- Added `forceRefreshChatParticipants` command handler to refresh chat participants
- Implemented `getHelp` command handler for displaying help documentation
- Created `getNextTask` command handler for suggesting the next task
- Added `initializeTaskTracking` and `initialiseTaskTracking` handlers for task tracking
- Implemented `listTasks` command handler for listing tasks with optiona

--- a/apps/huckleberry-docs/blog/tags.yml
+++ b/apps/huckleberry-docs/blog/tags.yml
@@ -13,9 +13,9 @@ ai-agents:
   permalink: /ai-agents
   description: Topics related to AI agents and intelligent assistants
 
-vs-code:
+vscode:
   label: VS Code
-  permalink: /vs-code
+  permalink: /vscode
   description: Content related to Visual Studio Code and extensions
 
 testing:
@@ -142,3 +142,28 @@ code-quality:
   label: Code Quality
   permalink: /code-quality
   description: Best practices, standards, and tools for maintaining high-quality code
+
+copilot:
+  label: Copilot
+  permalink: /copilot
+  description: Topics specifically focusing on Microsoft's GitHub Copilot AI assistant and its features
+
+cursor:
+  label: Cursor
+  permalink: /cursor
+  description: Content related to the Cursor AI-powered code editor and its capabilities
+
+tools:
+  label: Tools
+  permalink: /tools
+  description: Software tools and utilities that enhance developer workflows and productivity
+
+ide-comparison:
+  label: IDE Comparison
+  permalink: /ide-comparison
+  description: Comparative analysis of different Integrated Development Environments and code editors
+
+prompts:
+  label: Prompts
+  permalink: /prompts
+  description: Topics related to prompt engineering, prompt files, and custom instructions for AI assistants
