ci: update GitHub Actions workflow for dependency installation logging
Improve the logging during the dependency installation step in the
GitHub Actions workflow. This change enhances visibility into the
installation process by adding summary messages to the GitHub step
summary, ensuring better tracking of the workflow's execution.

--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -35,9 +35,9 @@ jobs:
       - name: Install Dependencies
         run: |
           pnpm install --no-frozen-lockfile --no-strict-peer-dependencies --shamefully-hoist
-          echo "### 📦 Dependencies Installation" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Dependencies installed successfully" >> $GITHUB_STEP_SUMMARY
-          - name: Determine base branch
+          echo "### 📦 Dependencies Installation" >> $GITHUB_STEP_SUMMARY          echo "✅ Dependencies installed successfully" >> $GITHUB_STEP_SUMMARY
+      
+      - name: Determine base branch
         id: base-branch
         run: |
           BASE_BRANCH="origin/main"
@@ -83,11 +83,12 @@ jobs:
             echo "Affected projects:" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
             pnpm exec nx print-affected --base=${{ steps.base-branch.outputs.base-branch }} --type=app >> $GITHUB_STEP_SUMMARY
-            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
-          else
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY          else
             echo "❌ Build failed for affected projects" >> $GITHUB_STEP_SUMMARY
             exit 1
-          fi      - name: Validation Summary
+          fi
+          
+      - name: Validation Summary
         if: always()
         run: |
           echo "## 📊 Validation Results Summary" >> $GITHUB_STEP_SUMMARY
