--- a/.github/workflows/validate-pr.yml
+++ b/.github/workflows/validate-pr.yml
@@ -14,6 +14,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0  # Fetch all history for Nx affected commands
+          ref: ${{ github.event.pull_request.base.ref || 'main' }}
       
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -25,22 +26,29 @@ jobs:
         with:
           version: 8
           run_install: false
-          
-      - name: Setup pnpm cache
+            - name: Setup pnpm cache
         uses: actions/setup-node@v4
         with:
           node-version: 22
           cache: 'pnpm'
-
+          
       - name: Install Dependencies
         run: |
           pnpm install --no-frozen-lockfile --no-strict-peer-dependencies --shamefully-hoist
-          echo "### 📦 Dependencies Installation" >> $GITHUB_STEP_SUMMARY          echo "✅ Dependencies installed successfully" >> $GITHUB_STEP_SUMMARY
-      
+          echo "### 📦 Dependencies Installation" >> $GITHUB_STEP_SUMMARY
+          echo "✅ Dependencies installed successfully" >> $GITHUB_STEP_SUMMARY
+          
       - name: Determine base branch
         id: base-branch
         run: |
-          BASE_BRANCH="origin/main"
+          # For pull requests, use the base branch; otherwise default to origin/main
+          if [ "${{ github.event_name }}" == "pull_request" ]; then
+            BASE_BRANCH="origin/${{ github.event.pull_request.base.ref }}"
+          else
+            # Make sure we have the main branch
+            git fetch origin main:refs/remotes/origin/main --depth=1 || true
+            BASE_BRANCH="origin/main"
+          fi
           echo "base-branch=$BASE_BRANCH" >> $GITHUB_OUTPUT
           echo "### 🔍 NX Configuration" >> $GITHUB_STEP_SUMMARY
           echo "Base branch for affected commands: $BASE_BRANCH" >> $GITHUB_STEP_SUMMARY
@@ -83,7 +91,8 @@ jobs:
             echo "Affected projects:" >> $GITHUB_STEP_SUMMARY
             echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
             pnpm exec nx print-affected --base=${{ steps.base-branch.outputs.base-branch }} --type=app >> $GITHUB_STEP_SUMMARY
-            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY          else
+            echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+          else
             echo "❌ Build failed for affected projects" >> $GITHUB_STEP_SUMMARY
             exit 1
           fi
