feat: enhance Huckleberry extension with new interfaces and improved services
- Updated .gitignore to exclude additional files.
- Modified VS Code settings to enable AI agent rule generation.
- Expanded README with detailed directory structure and component descriptions.
- Refactored chat service to implement new IChatService interface.
- Introduced new interfaces for chat service, extension state service, language model tools
  provider, and tool manager.
- Improved extension state management with a singleton pattern.
- Added comprehensive unit tests for task manipulation functions, achieving over 90% code
  coverage.
- Created documentation for understanding the Huckleberry extension architecture.
- Updated task status and details in TASK-009.

--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ vitest.config.*.timestamp*
 apps/huckleberry-extension/*.vsix
 
 apps/huckleberry-extension/coverage
+.cursor\rules\nx-rules.mdc
+.github\instructions\nx.instructions.md
