--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "license": "MIT",
   "scripts": {
     "build:all": "nx run-many --target=build --all",
+    "build:affected": "nx affected -t build",
     "build:extension": "nx build vscode-copilot-huckleberry",
     "build:package:extension": "pnpm run build:extension && pnpm run package:extension",
     "build": "nx build",
     "clean:extension": "nx reset && rm -rf apps/huckleberry-extension/dist",
     "lint:all": "nx run-many --target=lint --all --skip-nx-cache",
+    "lint:affected": "nx affected -t lint",
     "lint:fix:all": "nx run-many --target=lint --all --skip-nx-cache --fix",
+    "lint:fix:affected": "nx affected -t lint --fix",
     "package:extension": "cd apps/huckleberry-extension && npx vsce package --no-dependencies",
     "preinstall": "npx only-allow pnpm",
     "prepare": "husky",
     "start:docs": "cd apps/huckleberry-docs && npx docusaurus start",
+    "test:all": "nx run-many --target=test --all",
+    "test:affected": "nx affected -t test",
+    "test:all:coverage": "nx run-many --target=test --all --configuration=coverage",
+    "test:affected:coverage": "nx affected -t test --configuration=coverage",
     "test:extension": "nx test vscode-copilot-huckleberry",
     "typecheck:all": "nx run-many --target=typecheck --all",
+    "typecheck:affected": "nx affected -t typecheck",
     "watch:extension": "nx build vscode-copilot-huckleberry --watch",
-    "validate": "pnpm run lint:all && pnpm run typecheck:all && pnpm run build:all"
+    "validate": "pnpm run lint:all && pnpm run typecheck:all && pnpm run test:all && pnpm run build:all",
+    "validate:affected": "pnpm run lint:affected && pnpm run typecheck:affected && pnpm run test:affected && pnpm run build:affected"
   },
   "private": true,
   "dependencies": {
@@ -48,13 +57,13 @@
     "@swc/helpers": "~0.5.11",
     "@testing-library/dom": "10.4.0",
     "@testing-library/react": "16.1.0",
-    "@types/node": "^20.0.0",
+    "@types/node": "^20.17.30",
     "@types/react": "^18.3.1",
     "@types/react-dom": "18.3.0",
     "@typescript-eslint/eslint-plugin": "^8.30.1",
     "@typescript-eslint/parser": "^8.30.1",
     "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/coverage-v8": "^3.0.5",
+    "@vitest/coverage-v8": "^3.1.1",
     "@vitest/ui": "^3.0.0",
     "autoprefixer": "10.4.13",
     "eslint": "^9.8.0",
@@ -74,6 +83,6 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.19.0",
     "vite": "^6.0.0",
-    "vitest": "^3.0.0"
+    "vitest": "^3.1.1"
   }
 }
