refactor: reorganize task management and update contribution guidelines
- Update TASK-013 with revised contribution guidelines

- Delete tasks 014-017 related to testing implementation

- Update tasks.json with new priorities and statuses

- Clean up project structure by removing test tasks

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ apps/huckleberry-extension/*.vsix
 apps/huckleberry-extension/coverage
 .cursor\rules\nx-rules.mdc
 .github\instructions\nx.instructions.md
+
+.cursor\rules\nx-rules.mdc
+.github\instructions\nx.instructions.md
