feat: add huckleberry task explorer view and welcome item
- introduce new view container for the huckleberry task explorer in package.json
- update command handler to open task explorer view correctly
- implement welcome tree item to guide users in initializing task tracking
- enhance task explorer provider to check if tasks are initialized and display welcome item
- add svg assets for huckleberry logo in both light and dark themes
- update theme svg files for consistency in design
- create new blog post detailing task explorer features and benefits

--- a/apps/huckleberry-extension/package.json
+++ b/apps/huckleberry-extension/package.json
@@ -500,15 +500,27 @@
           "description": "Number of days for custom due date setting (when defaultDueDate is set to 'custom')"
         }
       }
-    },
-    "views": {
-      "explorer": [
+    },    "viewsContainers": {
+      "activitybar": [
         {
           "id": "huckleberryTaskExplorer",
-          "name": "Huckleberry Tasks",
-          "icon": "$(tasklist)",
-          "type": "tree",
-          "visibility": "collapsed",
+          "title": "Huckleberry Tasks",
+          "icon": {
+            "light": "./resources/huckleberry-logo-light.svg",
+            "dark": "./resources/huckleberry-logo-dark.svg"
+          }
+        }
+      ]
+    },
+    "views": {
+      "huckleberryTaskExplorer": [
+        {
+          "id": "huckleberryTaskExplorer",
+          "name": "Task Explorer",
+          "icon": {
+            "light": "./resources/huckleberry-logo-light.svg",
+            "dark": "./resources/huckleberry-logo-dark.svg"
+          },
           "contextualTitle": "Tasks"
         }
       ]
